[tool.poetry]
name = "package-downloader"
version = "1.0.0"
description = "A utility for downloading stuffs!!"
authors = ["Jeel Dobariya <dobariyaj34@gmail.com>"]
license = "MIT"
repository = "https://github.com/JeelDobariya38/Package-Downloader"
keywords = ["downloader", "package manager"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
packages = [
    { include = "package_downloader" }
]

[tool.poetry.scripts]
packagemanager = 'package_downloader.main:run'

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
